# lnurl-pos

./: .metadata  README.md  build-macos.sh  index.html  pubspec.yaml
.github/workflows/: android-release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/app/cashup/terminal/: MainActivity.kt
android/app/src/main/kotlin/io/github/joschisan/lnurl_pos/: MainActivity.kt
assets/: generate_icon.py
lib/: main.dart
lib/screens/: amount_screen.dart  cashup_screen.dart  confirmation_screen.dart  currency_screen.dart  display_invoice_screen.dart  invoice_screen.dart  lnurl_scan_screen.dart  lnurl_screen.dart
lib/utils/: notification_utils.dart
lib/widgets/: action_button.dart  amount_display.dart  async_action_button.dart  navigation_button.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: lib.rs
